--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "devDependencies": {
     "@adobe/json-formula": "0.1.50",
-    "@aemforms/af-core": "0.22.121",
+    "@aemforms/af-core": "0.22.150",
     "@aemforms/af-custom-functions": "1.0.14",
-    "@aemforms/af-formatters": "0.22.121",
+    "@aemforms/af-formatters": "0.22.150",
     "@babel/eslint-parser": "7.25.9",
     "@playwright/test": "^1.43.1",
     "@testing-library/dom": "9.3.4",
@@ -87,19 +87,14 @@
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^17.0.1",
     "stylelint": "16.12.0",
-    "stylelint-config-standard": "36.0.1",
-    "@adobe/json-formula": "0.1.50",
-    "@aemforms/af-core": "0.22.150",
-    "@aemforms/af-formatters": "0.22.150",
-    "@aemforms/af-custom-functions": "1.0.14",
-    "@playwright/test": "^1.43.1",
-    "sinon": "^17.0.1",
-    "stylelint": "16.12.0",
     "stylelint-config-standard": "36.0.1"
   },
   "mocha": {
     "spec": "test/**/*.test.js",
     "require": "test/unit/setup-env.js",
     "recursive": "true"
+  },
+  "dependencies": {
+    "@adobe/aem-cli": "^16.16.21"
   }
 }
